[app] - Correct info grammar and align skills.

--- a/client/src/styles/myApp.css
+++ b/client/src/styles/myApp.css
@@ -49,7 +49,7 @@ html {
   padding: 5% 20% 5% 20%;
   display: flex;
   flex-flow: row wrap; /* flex-direction flex-wrap */
-  align-items: center; /* cross axis */
+  align-items: baseline; /* cross axis */
   justify-content: center;
 }
 
@@ -111,7 +111,7 @@ html {
 ********************/
 
 .projects {
-  padding: 5% 20% 5% 20%;
+  /* padding: 5% 20% 5% 20%; */
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
@@ -125,8 +125,8 @@ html {
 }
 
 .abay-photo {
-  height: 700px;
-  width: 1100px;
+  height: 500px;
+  width: 700px;
 }
 
 /********************
